attached_assets/Pasted--Processing-esp32doit-devkit-v1-platform-espressif32-bo_1781538821071.txt

Processing esp32doit-devkit-v1 (platform: espressif32; board: esp32doit-devkit-v1; framework: arduino)
-------------------------------------------------------------------------------------------------------------------
Verbose mode can be enabled via `-v, --verbose` option
CONFIGURATION: https://docs.platformio.org/page/boards/espressif32/esp32doit-devkit-v1.html
PLATFORM: Espressif 32 (7.0.1) > DOIT ESP32 DEVKIT V1
HARDWARE: ESP32 240MHz, 320KB RAM, 4MB Flash
DEBUG: Current (cmsis-dap) External (cmsis-dap, esp-bridge, esp-prog, iot-bus-jtag, jlink, minimodule, olimex-arm-usb-ocd, olimex-arm-usb-ocd-h, olimex-arm-usb-tiny-h, olimex-jtag-tiny, tumpa)
PACKAGES: 
 - framework-arduinoespressif32 @ 3.20017.241212+sha.dcc1105b 
 - tool-esptoolpy @ 2.41100.0 (4.11.0) 
 - tool-mkfatfs @ 2.0.1 
 - tool-mklittlefs @ 1.203.210628 (2.3) 
 - tool-mkspiffs @ 2.230.0 (2.30) 
 - toolchain-xtensa-esp32 @ 8.4.0+2021r2-patch5
LDF: Library Dependency Finder -> https://bit.ly/configure-pio-ldf
LDF Modes: Finder ~ chain, Compatibility ~ soft
Found 34 compatible libraries
Scanning dependencies...
Dependency Graph
|-- ESP32Servo @ 3.2.1
|-- Wire @ 2.0.0
Building in release mode
Compiling .pio\build\esp32doit-devkit-v1\src\main.cpp.o
src/main.cpp: In function 'void loop()':
src/main.cpp:125:53: error: no matching function for call to 'AutoThrottleController::update(float&, int&)'
         int   target  = atc.update(tiltMag, throttle);
                                                     ^
In file included from src/main.cpp:29:
src/auto_throttle.h:175:9: note: candidate: 'int AutoThrottleController::update(float, uint32_t, int)'
     int update(float tiltMag, uint32_t rpmActual, int throttleNow)
         ^~~~~~
src/auto_throttle.h:175:9: note:   candidate expects 3 arguments, 2 provided
*** [.pio\build\esp32doit-devkit-v1\src\main.cpp.o] Error 1
=========================================== [FAILED] Took 9.97 seconds ===========================================

 *  The terminal process "C:\Users\mweny\.platformio\penv\Scripts\platformio.exe 'run', '--target', 'upload', '--upload-port', 'COM6'" terminated with exit code: 1. 
